apps/mission-ctrl/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mission-ctrl-deployment
  labels:
    app: mission-ctrl
spec:
  replicas: 4
  selector:
    matchLabels:
      app: mission-ctrl
  template:
    metadata:
      labels:
        app: mission-ctrl
    spec:
      containers:
        - name: mission-ctrl-app
          image: ghcr.io/blazeisclone/spaceops-mission-ctrl:v0.0.6
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "150m"
