apps/mission-ctrl/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mission-ctrl-service
  namespace: prod
  labels:
    app: mission-ctrl
spec:
  type: ClusterIP
  selector:
    app: mission-ctrl
  ports:
    - port: 80
      targetPort: 3000
