apps/mission-ctrl/base/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mission-ctrl-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`$(HOST_URL)`)
      services:
        - name: mission-ctrl-service
          port: 80
